IA-3310: Added .env.local to support new docker compose and new environment variables required for CKAN 2.10

--- a/docker-compose-new.yaml
+++ b/docker-compose-new.yaml
@@ -30,7 +30,7 @@ services:
       vpc:
         ipv4_address: 10.10.0.2
     env_file:
-      - .env
+      - .env.local
     #volumes:
     #- ckan:/var/lib/ckan/
     ## AWS Configuration: uncomment this line and ensure you have your AWS credentials configured in your local ~/.aws directory
