IA-3310: Disabled registration

--- a/ckan/ckan.ini
+++ b/ckan/ckan.ini
@@ -1,3 +1,4 @@
+## This is not being used at the current time with CKAN2.10.
 #
 # CKAN configuration
 #
@@ -99,7 +100,7 @@ ckan.auth.user_create_organizations = true
 ckan.auth.user_delete_groups = true
 ckan.auth.user_delete_organizations = true
 ckan.auth.create_user_via_api = false
-ckan.auth.create_user_via_web = true
+ckan.auth.create_user_via_web = false
 ckan.auth.roles_that_cascade_to_sub_groups = admin
 ckan.auth.public_user_details = true
 ckan.auth.public_activity_stream_detail = false
