--- a/.env.local
+++ b/.env.local
@@ -47,6 +47,8 @@ CKAN_SYSADMIN_EMAIL=your_email@example.com
 CKAN_STORAGE_PATH=/var/lib/ckan
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
+CKAN__AUTH__CREATE_USER_VIA_API=false
+CKAN__AUTH__CREATE_USER_VIA_WEB=false
 
 #
 CKAN_REDIS_URL=redis://redis:6379/1
