IA-3333: Adding xloader to ckan configuration

--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,7 @@ POSTGRESQL_CONTAINER_NAME=postgres
 SOLR_CONTAINER_NAME=solr
 DATAPUSHER_CONTAINER_NAME=datapusher
 CKAN_CONTAINER_NAME=ckan
+XLOADER_CONTAINER_NAME=xloader
 #WORKER_CONTAINER_NAME=ckan-worker
 
 # Host Ports
@@ -49,12 +50,20 @@ CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
 CKAN__AUTH__CREATE_USER_VIA_API=false
 CKAN__AUTH__CREATE_USER_VIA_WEB=false
+#CKAN__PLUGINS=aircan_connector
+
+# Xloader
+XLOADER_VERSION=1.0.1
+XLOADER_PORT=8800
+XLOADER_PORT_HOST=8800
+XLOADER__PLUGINS="envvars image_view text_view recline_view datastore xloader"
 
 #
 CKAN_REDIS_URL=redis://redis:6379/1
-CKAN_DATAPUSHER_URL=http://datapusher:8800
+CKAN_DATAPUSHER_URL=http://xloader:8800
+CKAN__DATAPUSHER__CALLBACK_URL_BASE=http://xloader:8800
 CKAN_SOLR_URL=http://solr:8983/solr/ckan
 POSTGRES_FQDN=postgres
 REDIS_FQDN=redis
 SOLR_FQDN=solr
-DATAPUSHER_FQDN=datapusher
+DATAPUSHER_FQDN=xloader
