IA-3333: Adding working upgraded datapusher

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,12 +16,13 @@ networks:
 services:
   ckan:
     container_name: ckan
-    image: ckan
+    #image: ckan
+    image: openknowledge/ckan-dev:2.10.1
     depends_on:
     - postgres
-    build:
-      context: ./ckan/
-      dockerfile: Dockerfile
+   # build:
+   #   context: ./ckan/
+   #   dockerfile: Dockerfile
     expose:
     - 5000
     ports:
@@ -36,23 +37,7 @@ services:
     ## AWS Configuration: uncomment this line and ensure you have your AWS credentials configured in your local ~/.aws directory
     #- ~/.aws/:/root/.aws/
 
-  xloader:
-    container_name: xloader
-    image: ckan-datapusher
-    build:
-      context: ./ckan-datapusher/
-    expose:
-    - 8800
-    ports:
-    - 8800:8800
-    networks:
-      vpc:
-        ipv4_address: 10.10.0.3
-    extra_hosts:
-    - sba.ckan.com:10.10.0.2
-    env_file:
-      - .env.local
-
+  ## Old datapusher leaving here temporarily until we meet with GSA
   #datapusher:
   #  container_name: datapusher
   #  image: ckan-datapusher
@@ -67,6 +52,23 @@ services:
   #      ipv4_address: 10.10.0.3
   #  extra_hosts:
   #  - sba.ckan.com:10.10.0.2
+
+  # New datapusher which appears to work. Need to speak with GSA as it looks like they are using XLoader and they themselves have a custom image.
+  datapusher:
+    container_name: datapusher
+    #image: ckan-datapusher
+    image: openknowledge/datapusher
+    #build:
+    #  context: ./ckan-datapusher/
+    expose:
+    - 8800
+    ports:
+    - 8800:8800
+    networks:
+      vpc:
+        ipv4_address: 10.10.0.3
+    extra_hosts:
+    - sba.ckan.com:10.10.0.2
 
   postgres:
     container_name: postgres
