IA-3333: Installing all gsa plugins into container with requirements.txt

--- a/.env.local
+++ b/.env.local
@@ -55,7 +55,7 @@ XLOADER_VERSION=1.0.1
 XLOADER_PORT=5000
 XLOADER_PORT_HOST=5000
 #CKAN__PLUGINS="envvars image_view text_view recline_view datastore"
-CKAN__PLUGINS="datastore datapusher stats text_view recline_view envvars"
+CKAN__PLUGINS="datastore datapusher stats text_view recline_view envvars dcat_usmetadata usmetadata googleanalyticsbasic datajson harvest datajson_validator datajson_harvest"
 CKANEXT__XLOADER__JOBS_DB__URI=postgresql://ckan_default:fearless@postgres/datastore  #postgresql://datastore:pass@datastore/datastore
 CKANEXT__XLOADER__FORMATS=csv application/csv xls xlsx application/vnd.ms-excel
 # The maximum size of files to load into DataStore. In bytes. Default is 1 GB.
