IA-3333: Adjusted aurora parameters for production

--- a/ckan-datapusher/Dockerfile
+++ b/ckan-datapusher/Dockerfile
@@ -1,14 +1,5 @@
-FROM ckan/ckan-base-xloader:1.0.1
+FROM openknowledge/datapusher
 
-## Set up environment variables
-#ENV APP_DIR=/srv/app
-#ENV TZ=UTC
-#RUN echo ${TZ} > /etc/timezone
-#
-## Make sure both files are not exactly the same
-#RUN if ! [ /usr/share/zoneinfo/${TZ} -ef /etc/localtime ]; then \
-#        cp /usr/share/zoneinfo/${TZ} /etc/localtime ;\
-#    fi ;
 
 EXPOSE 8800
 
