IA-3428: Installed googleanalytics; modified other plugins as we determined some plugins cause other plugins to not load; updated README to reflect these changes

--- a/.env.local
+++ b/.env.local
@@ -48,27 +48,32 @@ CKAN_STORAGE_PATH=/var/lib/ckan
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
 CKAN__AUTH__CREATE_USER_VIA_API=false
+CKAN__PLUGINS="image_view text_view recline_view datastore datapusher googleanalytics envvars"
 CKAN__AUTH__CREATE_USER_VIA_WEB=false
+# Google Analytics
+CKAN___GOOGLEANALYTICS__ID=UA-123456788-1
+CKAN___GOOGLEANALYTICS__ACCOUNT=fake
+CKAN___GOOGLEANALYTICS__USERNAME=fake
+CKAN___GOOGLEANALYTICS__PASSWORD=fake
 
 # Xloader
-XLOADER_VERSION=1.0.1
-XLOADER_PORT=5000
-XLOADER_PORT_HOST=5000
-#CKAN__PLUGINS="envvars image_view text_view recline_view datastore"
-CKAN__PLUGINS="datastore datapusher stats text_view recline_view envvars dcat_usmetadata usmetadata googleanalyticsbasic datajson harvest datajson_validator datajson_harvest"
-CKANEXT__XLOADER__JOBS_DB__URI=postgresql://ckan_default:fearless@postgres/datastore  #postgresql://datastore:pass@datastore/datastore
-CKANEXT__XLOADER__FORMATS=csv application/csv xls xlsx application/vnd.ms-excel
+#XLOADER_VERSION=1.0.1
+#XLOADER_PORT=5000
+#XLOADER_PORT_HOST=5000
+#CKAN__PLUGINS="datastore datapusher stats text_view recline_view envvars dcat_usmetadata usmetadata googleanalyticsbasic datajson harvest datajson_validator datajson_harvest"
+#CKANEXT__XLOADER__JOBS_DB__URI=postgresql://ckan_default:fearless@postgres/datastore  #postgresql://datastore:pass@datastore/datastore
+#CKANEXT__XLOADER__FORMATS=csv application/csv xls xlsx application/vnd.ms-excel
 # The maximum size of files to load into DataStore. In bytes. Default is 1 GB.
-CKANEXT__XLOADER__MAX_CONTENT_LENGTH=1000000000
+#CKANEXT__XLOADER__MAX_CONTENT_LENGTH=1000000000
 # To always use messytables to load data, instead of attempting a direct
 # PostgreSQL COPY, set this to True. This more closely matches the
 # DataPusher's behavior. It has the advantage that the column types
 # are guessed. However it is more error prone, far slower and you can't run
 # the CPU-intensive queue on a separate machine.
-CKANEXT__XLOADER__JUST_LOAD_WITH_MESSYTABLES=False
+#CKANEXT__XLOADER__JUST_LOAD_WITH_MESSYTABLES=False
 # The maximum time for the loading of a resource before it is aborted.
 # Give an amount in seconds. Default is 60 minutes
-CKANEXT__XLOADER__JOB_TIMEOUT=3600
+#CKANEXT__XLOADER__JOB_TIMEOUT=3600
 # Ignore the file hash when submitting to the DataStore, if set to True
 # resources are always submitted (if their format matches), if set to
 # False (default), resources are only submitted if their hash has changed.
@@ -82,14 +87,15 @@ CKANEXT__XLOADER__JOB_TIMEOUT=3600
 # is not exceeded.
 # If set to 0 (default) files that exceed the `max_content_length` will
 # not be loaded into the datastore.
-CKANEXT__XLOADER__MAX_EXCERPT_LINES=100
+#CKANEXT__XLOADER__MAX_EXCERPT_LINES=100
 
 #
 CKAN_REDIS_URL=redis://redis:6379/1
-CKAN_DATAPUSHER_URL=http://datapusher:8800
+CKAN_DATAPUSHER_URL=http://datapusher:8800/
 CKAN__DATAPUSHER__CALLBACK_URL_BASE=http://sba.ckan.com:5000
 CKAN_SOLR_URL=http://solr:8983/solr/ckan
 POSTGRES_FQDN=postgres
 REDIS_FQDN=redis
 SOLR_FQDN=solr
 DATAPUSHER_FQDN=datapusher
+
