IA-3428: Removed datapusher from local development; installed Xloader in its place

--- a/ckan/requirements.txt
+++ b/ckan/requirements.txt
@@ -1,6 +1,10 @@
 ckanext-dcat-usmetadata
 ckanext-usmetadata
 ckanext-datajson
+ckanext-xloader
+
+# ckanext-xloader requirements
+ -r https://raw.githubusercontent.com/ckan/ckanext-xloader/master/requirements.txt
 
 # ckanext-harvest and its requirements
  -e git+https://github.com/ckan/ckanext-harvest.git@2e5ac42f3ba58dd4bcb1e69a783e155828ff4b89#egg=ckanext-harvest
