IA-3524: Found and fixed issue with Xloader not parsing private files; Issue is due to values not existing in ckan.ini

--- a/.env.local
+++ b/.env.local
@@ -29,16 +29,15 @@ DATASTORE_READONLY_USER=datastore_ro
 DATASTORE_READONLY_PASSWORD=datastore
 DATASTORE_DB=datastore
 CKAN_SQLALCHEMY_URL=postgresql://ckan_default:fearless@postgres/ckan_default
-CKAN_DATASTORE_WRITE_URL=postgresql://ckan_default:fearless@postgres/datastore
-CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@postgres/datastore
+CKAN_DATASTORE_WRITE_URL=postgresql://datastore:datastore@datastore/datastore
+CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@datastore/datastore
 
 # Test database connections
 TEST_CKAN_SQLALCHEMY_URL=postgres://ckan_default:fearless@postgres/ckan_test
-TEST_CKAN_DATASTORE_WRITE_URL=postgresql://ckan_default:fearless@postgres/datastore_test
-TEST_CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore_test
+TEST_CKAN_DATASTORE_WRITE_URL=postgresql://datastore:datastore@datastore/datastore_test
+TEST_CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@datastore/datastore_test
 
 # CKAN core
-#CKAN_DATAPUSHER_API_TOKEN=xxx
 CKAN_VERSION=2.10.0
 CKAN_SITE_ID=default
 CKAN_SITE_URL=http://sba.ckan.com:5000
@@ -65,14 +64,14 @@ CKAN___GOOGLEANALYTICS__PASSWORD=fake
 
 # Xloader
 #CKAN___XLOADER_VERSION=1.0.1
-CKAN___XLOADER__API_TOKEN=xxx
-CKAN__DATAPUSHER_API_TOKEN=xxx
+# CKAN API TOKENS are not being picked up by XLOADER. These need to be set in the ckan.ini file and built into the container
+#CKAN___XLOADER__API_TOKEN=
+#CKAN__DATAPUSHER__API_TOKEN=
 CKANEXT__XLOADER__FORMATS=csv application/csv xls xlsx application/vnd.ms-excel
 CKANEXT__XLOADER__MAX_CONTENT_LENGTH=1000000000
 CKANEXT__XLOADER__JUST_LOAD_WITH_MESSYTABLES=False
 CKANEXT__XLOADER__JOB_TIMEOUT=3600
 CKANEXT__XLOADER__MAX_EXCERPT_LINES=100
-#CKAN_DATAPUSHER_API_TOKEN=xxx
-#CKANEXT__XLOADER__JOBS_DB_URI=postgresql://ckan_default:fearless@postgres/datastore
+CKANEXT__XLOADER__JOBS_DB__URI=postgresql://datastore:datastore@datastore/datastore
 #CKAN___XLOADER_PORT=5000
 #XLOADER_PORT_HOST=5000
