--- a/ckan/ckan.ini
+++ b/ckan/ckan.ini
@@ -1,4 +1,3 @@
-## This is not being used at the current time with CKAN2.10.
 #
 # CKAN configuration
 #
@@ -39,7 +38,6 @@
 debug = false
 
 [app:main]
-ckan.datapusher.api_token=${CKAN_DATAPUSHER_API_TOKEN}
 
 ## General settings ############################################################
 use = egg:ckan
@@ -59,7 +57,7 @@ ckan.devserver.ssl_key =
 ckan.user.last_active_interval = 600
 cache_dir = /tmp/%(ckan.site_id)s
 beaker.session.key = ckan
-beaker.session.secret=wITdkoWdS7B0w6TpZWYTefu70vw98nfkxihPF_dHb2Y
+beaker.session.secret=R7eJCh8q82jXhrUhYaCZugCuHc6e8SLSlKfm0Hoivto
 beaker.session.auto = false
 beaker.session.cookie_expires = false
 # beaker.session.cookie_domain = .example.com
@@ -68,15 +66,9 @@ beaker.session.secure = false
 beaker.session.timeout = 600
 
 ## Database settings ###########################################################
-sqlalchemy.url = ${CKAN_SQLALCHEMY_URL}
+sqlalchemy.url = postgresql://ckan_default:pass@localhost/ckan_default
 sqlalchemy.pool_pre_ping = true
-# sqlalchemy.<OPTION> =
-
-## Datapusher settings #########################################################
-ckan.datapusher.formats = csv tsv application/csv
-ckan.datapusher.url = ${CKAN_DATAPUSHER_URL}
-ckan.datapusher.callback_url_base = ${CKAN_DATAPUSHER_CALLBACK_URL}
-ckan.datapusher.assume_task_stale_after = 3600
+# sqlalchemy.<OPTION> = 
 
 ## Site Settings ###############################################################
 ckan.site_url = http://127.0.0.1:5000
@@ -116,7 +108,7 @@ ckan.auth.route_after_login = dashboard.datasets
 ## CSRF Protection #############################################################
 WTF_CSRF_ENABLED = true
 WTF_CSRF_CHECK_DEFAULT = true
-WTF_CSRF_SECRET_KEY=tZya3VUhxe1Ev0KEwxT6BmtdT9-k06RQT8dAweNV3Y4
+WTF_CSRF_SECRET_KEY=OylG3Ee6FFtW6MmVa9BwJGHbgeNOe6NSfhb03Ykg2eU
 WTF_CSRF_METHODS = POST PUT PATCH DELETE
 WTF_CSRF_FIELD_NAME = _csrf_token
 WTF_CSRF_HEADERS = X-CSRFToken X-CSRF-Token
@@ -137,13 +129,15 @@ REMEMBER_COOKIE_SAMESITE = None
 
 ## API Token Settings ##########################################################
 api_token.nbytes = 32
-api_token.jwt.encode.secret=string:Euxp5ctqx620IEgRhGBONLAMdJI-_jo64l7A-pEesic
-api_token.jwt.decode.secret=string:Euxp5ctqx620IEgRhGBONLAMdJI-_jo64l7A-pEesic
+ckanext.xloader.api_token = ${API_TOKEN}
+ckan.lib.api_token = ${API_TOKEN}
+api_token.jwt.encode.secret=string:mZHyhxoSBZ3ZzhxBmXYIsRRquXnhQSQFgDzq7xzgbYA
+api_token.jwt.decode.secret=string:mZHyhxoSBZ3ZzhxBmXYIsRRquXnhQSQFgDzq7xzgbYA
 api_token.jwt.algorithm = HS256
 
 ## Search Settings #############################################################
 ckan.site_id = default
-solr_url = http://${CKAN_SOLR_URL}
+solr_url = http://127.0.0.1:8983/solr/ckan
 solr_user = 
 solr_password = 
 ckan.search.remove_deleted_packages = true
@@ -161,14 +155,14 @@ ckan.group_and_organization_list_all_fields_max = 25
 solr_timeout = 60
 
 ## Redis Settings ##############################################################
-ckan.redis.url = ${CKAN_REDIS_URL}
+ckan.redis.url = redis://localhost:6379/0
 
 ## CORS Settings ###############################################################
 ckan.cors.origin_allow_all = false
 ckan.cors.origin_whitelist = 
 
 ## Plugins Settings ############################################################
-ckan.plugins = envvars image_view text_view recline_view datastore datapusher
+ckan.plugins = image_view text_view recline_view datastore googleanalytics xloader envvars
 ckan.resource_proxy.timeout = 5
 
 ## Front-End Settings ##########################################################
