--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,13 +1,9 @@
 # global configuration for all jobs
 name: Staging
-#on:
-#  push:
-#    tags:
-#      - rc-v*.*
 on:
   push:
-    branches:
-      - IA-*
+    tags:
+      - rc-v*.*
 
 # sets the default shell for all jobs
 defaults:
@@ -57,39 +53,33 @@ jobs:
           dockerfile: ckan/Dockerfile
           image: ${{ steps.ecr-login.outputs.registry }}/ckan
 
-      #- name: ECR Build & Push CKAN Datapusher
-      #  uses: ./.github/actions/ecr
-      #  with:
-      #    dockerfile: ckan-datapusher/Dockerfile
-      #    image: ${{ steps.ecr-login.outputs.registry }}/ckan-datapusher
+      - name: ECR Build & Push CKAN Solr
+        uses: ./.github/actions/ecr
+        with:
+          dockerfile: ckan-solr/Dockerfile
+          image: ${{ steps.ecr-login.outputs.registry }}/ckan-solr
 
-      #- name: ECR Build & Push CKAN Solr
-      #  uses: ./.github/actions/ecr
-      #  with:
-      #    dockerfile: ckan-solr/Dockerfile
-      #    image: ${{ steps.ecr-login.outputs.registry }}/ckan-solr
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment: staging
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #deploy:
-  #  needs: build
-  #  runs-on: ubuntu-latest
-  #  environment: staging
-  #  steps:
-  #    - name: Checkout
-  #      uses: actions/checkout@v3
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
+          aws-region: us-east-1
 
-  #    - name: Configure AWS credentials
-  #      uses: aws-actions/configure-aws-credentials@v2
-  #      with:
-  #        role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
-  #        aws-region: us-east-1
+      - name: ECR Login
+        uses: aws-actions/amazon-ecr-login@v1
+        id: ecr-login
 
-  #    - name: ECR Login
-  #      uses: aws-actions/amazon-ecr-login@v1
-  #      id: ecr-login
-
-  #    - name: Terraform Plan & Apply
-  #      uses: ./.github/actions/terraform
-  #      with:
-  #        folder: ./terraform/applications
-  #        image_tag: ${{ github.ref_name }}
-  #        workspace: staging
+      - name: Terraform Plan & Apply
+        uses: ./.github/actions/terraform
+        with:
+          folder: ./terraform/applications
+          image_tag: ${{ github.ref_name }}
+          workspace: staging
