--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -23,6 +23,18 @@ jobs:
       - name: 'Checkout'
         uses: 'actions/checkout@v3'
 
+      - name: Pre Build Environment Substitute
+        env:
+          CKAN_API_TOKEN: ${{ secrets.CKAN_API_TOKEN }}
+          CKAN_SITE_URL: https://data.staging.ckan.ussba.io
+          REDIS_URL: redis://redis.staging.ckan.ussba.io:6379/1
+          SOLR_URL: http://solr.staging.ckan.ussba.io:8983/solr/ckan
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install gettext-base -y
+          cd ckan/
+          envsubst < ckan.ini.template > ckan.ini
+
       - name: 'Docker Image Build CKAN'
         uses: './.github/actions/ecr'
         with:
