--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -1,30 +1,29 @@
-# global configuration for all jobs
-name: Staging
+name: Deploy CKAN
 on:
-  push:
-    tags:
-      - rc-v*.*
+  workflow_dispatch:
+    inputs:
+      target:
+        type: environment
+        required: true
 
-# sets the default shell for all jobs
 defaults:
   run:
     shell: bash
 
-# permissions can be set globally for jobs
 permissions:
-  contents: read # contents is used for checking out code
+  contents: read
   id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment: staging
+    environment: ${{ inputs.target }}
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
           aws-region: us-east-1
@@ -32,10 +31,8 @@ jobs:
       - name: ECR Login
         uses: aws-actions/amazon-ecr-login@v2
         id: ecr-login
-        with:
-          registries: 898673322888
 
-      - name: Pre Build Environment Substitute
+      - name: Make ckan.ini
         env:
           CKAN_API_TOKEN: ${{ secrets.CKAN_API_TOKEN }}
           CKAN_SITE_URL: https://data.staging.ckan.ussba.io
@@ -53,33 +50,33 @@ jobs:
           dockerfile: ckan/Dockerfile
           image: ${{ steps.ecr-login.outputs.registry }}/ckan
 
-      - name: ECR Build & Push CKAN Solr
-        uses: ./.github/actions/ecr
-        with:
-          dockerfile: ckan-solr/Dockerfile
-          image: ${{ steps.ecr-login.outputs.registry }}/ckan-solr
-
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment: ${{ inputs.target }}
     environment: staging
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           role-to-assume: ${{ secrets.OIDC_ROLE_ARN }}
           aws-region: us-east-1
 
       - name: ECR Login
-        uses: aws-actions/amazon-ecr-login@v1
+        uses: aws-actions/amazon-ecr-login@v2
         id: ecr-login
+
+      - name: Install Terraform 1.6.1
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: '1.6.1'
 
       - name: Terraform Plan & Apply
         uses: ./.github/actions/terraform
         with:
           folder: ./terraform/applications
-          image_tag: ${{ github.ref_name }}
-          workspace: staging
+          image_tag: ${{ github.sha }}
+          workspace: ${{ inputs.target }}
